add Grid View but error.

--- a/membercard/res/layout/main.xml
+++ b/membercard/res/layout/main.xml
@@ -3,7 +3,17 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android" 
+	    android:id="@+id/gridview"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content"
+	    android:columnWidth="90dp"
+	    android:numColumns="auto_fit"
+	    android:verticalSpacing="10dp"
+	    android:horizontalSpacing="10dp"
+	    android:stretchMode="spacingWidthUniform"
+	    android:gravity="center"
+	/>
     <ImageView
         android:id="@+id/plusbutton"
         android:layout_width="wrap_content"
